- fixing the overflow

--- a/src/scss/base/_resets.scss
+++ b/src/scss/base/_resets.scss
@@ -7,7 +7,8 @@
   box-sizing: border-box;
 }
 .container {
-  width: 100%;
+  width: 90%;
+  min-height: 100vh;
   max-width: $maxWidth;
   @include grid(center);
 }
