--- a/src/scss/base/_typo.scss
+++ b/src/scss/base/_typo.scss
@@ -10,13 +10,12 @@ html {
 
 body {
   @include grid(center);
-  background: white;
+  background: #eaebf5;
   font-family: Helvetica Neue, sans-serif;
   font-weight: 400;
-  line-height: 1.75;
+  line-height: 1.3;
   color: $textColor;
 }
-
 p {
   max-width: 40em;
   margin-bottom: 1.5rem;
@@ -55,7 +54,7 @@ h5 {
 }
 
 small,
-.text-small {
+.small-Text {
   font-size: $smallText;
 }
 
